# searchy

./: Cargo.toml  searchy
actions/: Cargo.toml
actions/src/: lib.rs
actions/src/actions/: action.rs  action_database.rs  mod.rs  search_db.rs
actions/src/varieties/: mod.rs
actions/src/varieties/desktop_files/: application_file.rs  desktop_file_search.rs  ini_file.rs  mod.rs  run_application.rs
actions/src/varieties/path_executables/: path_executable_search.rs  run_shell_command.rs
azul/: main.c
iced_close_requested_listener/: Cargo.toml
iced_close_requested_listener/src/: lib.rs
iced_keyboard_capture/: Cargo.toml
iced_keyboard_capture/src/: lib.rs
interface/action_entry/: Cargo.toml
interface/action_entry/src/: lib.rs
interface/icons/: load-font-info.sh
interface/icons/src/: icons.rs  lib.rs
interface/javascript_repl_history/: Cargo.toml
interface/javascript_repl_history/src/: lib.rs
interface/key_shortcuts/: Cargo.toml
interface/key_shortcuts/src/: lib.rs  match_friendly_modifier.rs
interface/messages/: Cargo.toml
interface/messages/src/: lib.rs
interface/results/: Cargo.toml
interface/results/src/: lib.rs
interface/scrolling/: Cargo.toml
interface/scrolling/src/: lib.rs
interface/searchbox/: Cargo.toml
interface/searchbox/src/: lib.rs
interface/styling/: Cargo.toml
interface/styling/src/: hex_color_macro.rs  lib.rs
ipc_communication/: Cargo.toml
ipc_communication/src/: client_side.rs  lib.rs  message.rs  socket_file.rs
searchy-client/: Cargo.toml
searchy-client/src/: main.rs
searchyd/: Cargo.toml
searchyd/src/: main.rs  window.rs
src/: application_file.rs  config.rs  daemon.rs  ini_file.rs  main.rs  searching.rs  searchy.rs
src/actions/: action.rs  action_database.rs  mod.rs  search_db.rs
src/desktop_files/: application_file.rs  desktop_file_database.rs  desktop_file_search.rs  ini_file.rs  mod.rs
src/interface/: dynamically_selected.rs  keyboard_capture.rs  mod.rs  scroll_to_bottom.rs  search_keypress.rs  unix_stream_sub.rs  window.rs
src/ipc_communication/: message.rs  mod.rs  server_side.rs
src/path_executables/: mod.rs  path_executable_search.rs  run_shell_command.rs
src/query/: mod.rs  search_index.rs
unix_stream_subscription/: Cargo.toml
unix_stream_subscription/src/: lib.rs
