[workspace]
resolver = "2"
members = [
    "actions",
    "ipc_communication",
    "searchy-client",
    "searchyd",
    "iced_keyboard_capture",
    "interface/scrolling",
    "interface/messages",
    "interface/searchbox",
    "unix_stream_subscription",
    "interface/key_shortcuts",
    "interface/styling",
    "interface/action_entry",
    "interface/icons",
    "interface/javascript_repl_history",
    "interface/results"
]

