[package]
name = "searchyd"
version = "0.5.0"
edition = "2021"

[[bin]]
name = "searchyd"
path = "src/main.rs"

[dependencies]
ipc_communication = { path = "../ipc_communication" }
actions = { path = "../actions" }
iced_keyboard_capture = { path = "../iced_keyboard_capture" }
iced = "0.9"
iced_native = "0.10.3"
once_cell = "1.17.1"
interface_scrolling = { path = "../interface/scrolling" }
messages = { path = "../interface/messages" }
interface_searchbox = { path = "../interface/searchbox" }
unix_stream_subscription = { path = "../unix_stream_subscription" }
key_shortcuts = { path = "../interface/key_shortcuts" }