[package]
name = "interface_scrolling"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.9.0"
actions = { path = "../../actions" }
once_cell = "1.17.1"
messages = { path = "../messages" }
styling = { path = "../styling" }
action_entry = { path = "../action_entry" }
javascript_repl_history = { path = "../javascript_repl_history" }