[package]
name = "interface_searchbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.10"
once_cell = "1.17.1"
messages = { path = "../messages" }
interface_scrolling = { path = "../scrolling" }
styling = { path = "../styling" }